# actix-email

./: .env  Cargo.toml  README.md  configuration.toml
.github/workflows/: actions.yml
migrations/: 20230321075328_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
