[package]
name = "z2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "z2p_binary"

[dependencies]
actix-web = "4"
reqwest = "0.11.14"

[dev-dependencies]
actix-rt = "2.8.0"
tokio = "1.26.0"
