[package]
name = "z2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "z2p_binary"

[dependencies]
actix-web = "4"
config = "0.13.3"
reqwest = "0.11.14"
serde = {version = "1.0.157", features=["derive"]}
uuid = { version = "0.8.1", features=["v4"]}
chrono = "0.4.15"
env_logger = "0.10.0"
log = "0.4.17"

[dev-dependencies]
actix-rt = "2.8.0"
tokio = "1.26.0"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
"runtime-actix-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]
